[package]
name = "quantum-vault-core"
version = "0.1.0"
edition = "2021"
authors = ["Quantum Vault Team"]
description = "Open-source cryptographic core of Quantum Vault — XChaCha20-Poly1305, Argon2id key derivation, Shamir secret sharing, memory locking, and key zeroization"
license = "AGPL-3.0-only"
repository = "https://github.com/HarDPro2/Quantum-Vault-Core"
homepage = "https://quantum-vault-web.vercel.app"
keywords = ["encryption", "xchacha20", "argon2", "security", "zeroize"]
categories = ["cryptography", "os"]
readme = "README.md"

[dependencies]
# ── Cryptography (all from the audited RustCrypto project) ──────────
chacha20poly1305 = "0.10"                                # XChaCha20Poly1305 authenticated encryption
argon2 = "0.5"                                           # Argon2id key derivation (PHC winner)
sha2 = "0.10"                                            # SHA-256 hashing
rand = "0.8"                                             # Cryptographic RNG (OsRng)
zeroize = { version = "1", features = ["derive"] }       # Secure memory cleanup
hex = "0.4"                                              # Hex encoding for key transport
sharks = "0.5"                                           # Shamir Secret Sharing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Platform: Memory locking ───────────────────────────────────────
[target.'cfg(unix)'.dependencies]
libc = "0.2"                                             # mlock/munlock

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Memory",                               # VirtualLock/VirtualUnlock
] }

# ── Logging ─────────────────────────────────────────────────────────
tracing = "0.1"                                          # Structured logging

# ── Error handling ──────────────────────────────────────────────────
anyhow = "1"                                             # Ergonomic error propagation

[profile.release]
panic = "abort"       # No unwinding → smaller attack surface
codegen-units = 1     # Single codegen unit → better optimization
lto = true            # Link-time optimization
strip = true          # Strip debug symbols from binary
opt-level = "z"       # Optimize for size (smaller binary = less attack surface)
